# ZeroEQ

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_linux.sh  build_macos.zsh  build_windows.ps1  installer.iss  update_version.ps1
cmake/: Version.cmake
docs/: AAX_DEVELOPER_BUILD_GUIDE.md  AAX_LICENSE_REQUEST_EMAIL.md  AAX_SDK_README.md  AAX_SIGNING_GUIDE.md
plugin/: CMakeLists.txt
plugin/src/: KeyEventForwarder.cpp  KeyEventForwarder.h  KeyEventForwarder_mac.mm  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h.in
plugin/src/dsp/: Analyzer.cpp  Analyzer.h  Equalizer.cpp  Equalizer.h  MomentaryProcessor.cpp  MomentaryProcessor.h
scripts/: AAX_SIGNING_README.md  mac_install_helper.command  update_version.ps1
wasm/: CMakeLists.txt  build.sh
wasm/src/: analyzer.h  compressor.h  dsp_engine.h  equalizer.h  fft.h  momentary_processor.h  wasm_exports.cpp
webui/: .firebaserc  .gitignore  index.html  index.web.html  package-lock.json  package.json  vite.config.web.ts
webui/public/: debug.html
webui/public-web/worklet/: dsp-processor.js
webui/scripts/: sync-web-demos.cjs
webui/src/: App.css  App.tsx  main.tsx  version.ts  vite-env.d.ts
webui/src/assets/: licenses.json  web_demos.json
webui/src/bridge/: juce.ts
webui/src/bridge/web/: WebAudioEngine.ts  WebBridgeManager.ts  WebParamState.ts  juce-shim.ts  web-juce.ts
webui/src/components/: GlobalDialog.tsx  HorizontalParameter.tsx  LicenseDialog.tsx  OutputMeterWidget.tsx  ParameterFader.tsx  VUMeter.tsx  WebDemoMenu.tsx  WebTransportBar.tsx
webui/src/components/eq/: BandControlColumn.tsx  BandDefs.ts  FilterIcon.tsx  InlineNumberInput.tsx  InteractiveKnob.tsx  Knob.tsx  SpectrumEditor.tsx  eqCurve.ts
webui/src/hooks/: hoveredBandStore.ts  previewParamStore.ts  useBandParam.ts  useFineAdjustPointer.ts  useGlobalZoomGuard.ts  useHostShortcutForwarding.ts  useJuceParam.ts  useNumberInputAdjust.ts
webui/src/juce/: JuceBound.tsx
webui/src/store/: dialogStore.ts
webui/src/theme/: index.ts
webui/src/types/: index.ts
